welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() {
  var x:Double=0
  var y:Double=0
  val x2=getMondeLargeur()
  val y2=getMondeHauteur()
  var cmpt=0
  while (!arrive()) {
    ecritMessage(cmpt)
		x=x+1;y=y+1
    if (estBord(x,y)) {
      if (x==-1) {y=y+1;x=0} else {x=x+1;y=0}
      while (!estBord(x,y)) {x=x-1;y=y-1}
    }
    if (x==-1) {y=y-1;x=0} else {x=x-1;y=0}
    setPos(x,y)
    cmpt=cmpt+1
  }
  ecritMessage(cmpt)
}

def arrive ():Boolean ={
  val x=getX()
  val y=getY()
  val x2=getMondeLargeur()
  val y2=getMondeHauteur()
  return ((x==x2-1)&&(y==y2-1))
}

def estBord (x:Int,y:Int):Boolean ={
  val x2=getMondeLargeur()
  val y2=getMondeHauteur()
  return ((x==x2)||(y==y2)||(x==-1)||(y==-1))
}